// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Action Bar Contextual 1`] = `
<section>
  <div
    class="fd-action-bar"
  >
    
    
    <div
      class="fd-action-bar__header"
    >
      
        
      <div
        class="fd-action-bar__title"
      >
        
            
        <h1
          class="fd-title fd-title--h3"
        >
          Page Title
        </h1>
        
        
      </div>
      
        
      <div
        class="fd-action-bar__actions"
      >
        
            
        <div
          class="fd-popover"
        >
          
                
          <div
            class="fd-popover__control"
          >
            
                    
            <button
              aria-controls="wgxzK859"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="More"
              class="fd-button fd-button--transparent fd-button--compact"
              onclick="onPopoverClick('wgxzK859');"
            >
              
                        
              <i
                class="sap-icon--overflow"
              />
              
                    
            </button>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--right"
            id="wgxzK859"
          >
            
                    
            <nav
              class="fd-menu"
              id=""
            >
              
                        
              <ul
                class="fd-menu__list fd-menu__list--no-shadow"
              >
                
                            
                <li
                  class="fd-menu__item"
                >
                  
                                
                  <a
                    class="fd-menu__link"
                    href="#"
                  >
                    
                                    
                    <span
                      class="fd-menu__title"
                    >
                      Edit
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-menu__item"
                >
                  
                                
                  <a
                    class="fd-menu__link"
                    href="#"
                  >
                    
                                    
                    <span
                      class="fd-menu__title"
                    >
                      Delete
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-menu__item"
                >
                  
                                
                  <a
                    class="fd-menu__link"
                    href="#"
                  >
                    
                                    
                    <span
                      class="fd-menu__title"
                    >
                      Assign
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-menu__item"
                >
                  
                                
                  <a
                    class="fd-menu__link"
                    href="#"
                  >
                    
                                    
                    <span
                      class="fd-menu__title"
                    >
                      Expire
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-menu__item"
                >
                  
                                
                  <a
                    class="fd-menu__link"
                    href="#"
                  >
                    
                                    
                    <span
                      class="fd-menu__title"
                    >
                      Archive
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                        
              </ul>
              
                    
            </nav>
            
               
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    style="min-height: 200px"
  />
  

</section>
`;

exports[`Storyshots Components/Action Bar Default 1`] = `
<div
  class="fd-action-bar"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__back"
    >
      
            
      <button
        aria-label="Go Back"
        class="fd-button fd-button--transparent fd-button--compact"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
          role="presentation"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <p
    class="fd-action-bar__description fd-action-bar__description--back"
  >
    Action bar Description 
  </p>
  

</div>
`;

exports[`Storyshots Components/Action Bar Descriptive 1`] = `
<div
  class="fd-action-bar"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__back"
    >
      
            
      <button
        aria-label="Go Back"
        class="fd-button fd-button--transparent fd-button--compact"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
          role="presentation"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Long.
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <p
    class="fd-action-bar__description fd-action-bar__description--back"
  >
    Action bar Description Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Very Long
    
  </p>
  

</div>
`;

exports[`Storyshots Components/Action Bar Mobile 1`] = `
<section>
  <div
    style="width:319px;"
  >
    
    
    <div
      class="fd-action-bar fd-action-bar--s"
    >
       
        
      <div
        class="fd-action-bar__header"
      >
        
            
        <div
          class="fd-action-bar__back"
        >
          
                
          <button
            aria-label="Go Back"
            class="fd-button fd-button--transparent"
          >
            
                    
            <i
              class="sap-icon--navigation-left-arrow"
              role="presentation"
            />
            
                
          </button>
          
            
        </div>
        
            
        <div
          class="fd-action-bar__title"
        >
          
                
          <h1
            class="fd-title fd-title--h3"
          >
            Action Bar with description and back button
          </h1>
          
            
        </div>
        
            
        <div
          class="fd-action-bar__actions"
        >
          
                
          <div
            class="fd-popover"
          >
            
                    
            <div
              class="fd-popover__control"
            >
              
                        
              <button
                aria-controls="wgxzK85"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="More"
                class="fd-button fd-button--transparent"
                onclick="onPopoverClick('wgxzK85');"
              >
                
                            
                <i
                  class="sap-icon--overflow"
                />
                
                        
              </button>
              
                    
            </div>
            
                    
            <div
              aria-hidden="false"
              class="fd-popover__body"
              id="wgxzK85"
            >
              
                        
              <nav
                class="fd-menu"
                id=""
              >
                
                            
                <ul
                  class="fd-menu__list fd-menu__list--no-shadow"
                >
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                      href="#"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Option 1
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                      href="#"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Option 2
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                      href="#"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Option 3
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                      href="#"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Option 4
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                            
                </ul>
                
                        
              </nav>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    style="min-height: 200px"
  />
  

</section>
`;

exports[`Storyshots Components/Action Bar No back button 1`] = `
<div
  class="fd-action-bar"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <p
    class="fd-action-bar__description"
  >
    Action bar Description 
  </p>
  

</div>
`;

exports[`Storyshots Components/Action Bar No description 1`] = `
<div
  class="fd-action-bar"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__back"
    >
      
            
      <button
        aria-label="Go Back"
        class="fd-button fd-button--transparent fd-button--compact"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
          role="presentation"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Action Bar Responsive (M-L) 1`] = `
<div
  class="fd-action-bar fd-action-bar--m_l"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__back"
    >
      
            
      <button
        aria-label="Go Back"
        class="fd-button fd-button--transparent fd-button--compact"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
          role="presentation"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <p
    class="fd-action-bar__description fd-action-bar__description--back"
  >
    Action bar Description
  </p>
  

</div>
`;

exports[`Storyshots Components/Action Bar Responsive (XL) 1`] = `
<div
  class=" fd-action-bar fd-action-bar--xl"
>
  
    
  <div
    class="fd-action-bar__header"
  >
    
        
    <div
      class="fd-action-bar__back"
    >
      
            
      <button
        aria-label="Go Back"
        class="fd-button fd-button--transparent fd-button--compact"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
          role="presentation"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__title"
    >
      
            
      <h1
        class="fd-title fd-title--h3"
      >
        Page Title
      </h1>
      
        
    </div>
    
        
    <div
      class="fd-action-bar__actions"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact"
      >
        Button
      </button>
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--compact fd-button--emphasized"
      >
        Button
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <p
    class="fd-action-bar__description fd-action-bar__description--back"
  >
    Action bar Description 
  </p>
  

</div>
`;
